--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Camp of stupidchen 
-email: stupidchen@example.com
+email: stupidchen@foxmail.com
 description: >- # this means to ignore newlines until "baseurl:"
     Guess what? We found a camp here!
 
